style.css
@import url(https://fonts.googleapis.com/css?family=PT+Serif&display=swap);
@import url(https://fonts.googleapis.com/css?family=Fira+Mono&display=swap);

body {
    margin: auto;
    padding: 5%;
    max-width: 40em;
    font-family: PT Serif, serif;
    font-size: 100%;
    line-height: 140%;
    color: #333;
}

h1, h2, h3, h4, h5 {
    font-family: PT Serif, serif;
    font-weight: bold;
    border-bottom: 1px dotted black;
    color: #8b1a1a;
}

h1 { font-size: 140%; }
h2 { font-size: 120%; }
h3 { font-size: 110%; }
h4 { font-size: 105%; }
h5 { font-size: 100%; }

.headshotDiv {
    width: 5cm;
    height: 5cm;
    float: right;
    padding-left: 1em;
}

.headshot {
    width: 90%;
    height: auto;
    float: right;
}

.publications {
    list-style-type: square;
    margin: 0;
    padding: 0 20px;
}

.publications li {
    padding-top: 10px;
}

.award {
    font-size: 0.9em;
    color: gray;
    margin-left: 20px;
    list-style-type: none;
}

